<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:animateLayoutChanges="true"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >

    <include layout="@layout/action_bar"></include>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_above="@+id/adView">

    <TextView
        style="@style/label_text"
        android:text="@string/title_workout_difficulty" />

    <RadioGroup
        android:id="@+id/difficulty"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:background="@drawable/radio_group_back">
        <RadioButton
            android:id="@+id/one"
            style="@style/diff_btn_style"
            android:text="@string/tab_easy" />
        <RadioButton
            android:id="@+id/two"
            style="@style/diff_btn_style"
            android:text="@string/tab_medium"/>
        <RadioButton
            android:id="@+id/three"
            style="@style/diff_btn_style"
            android:text="@string/tab_hard"/>
    </RadioGroup>

    <TextView
        style="@style/label_text"
        android:text="@string/txt_sound"/>

    <Switch
        android:id="@+id/sound_switch"
        style="@style/settings_switch" />

    <TextView
        style="@style/label_text"
        android:text="@string/txt_set_reminder" />

    <Switch
        android:id="@+id/reminder_switch"
        style="@style/settings_switch" />


    <LinearLayout
        android:id="@+id/reminder_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="invisible">
            <LinearLayout
                android:id="@+id/week_day_group"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="horizontal">
                <CheckBox
                    android:id="@+id/sunday"
                    android:text="@string/sun"
                    style="@style/week_picker_text"/>
                <CheckBox
                    android:id="@+id/monday"
                    android:text="@string/mon"
                    style="@style/week_picker_text"/>
                <CheckBox
                    android:id="@+id/tuesday"
                    android:text="@string/tue"
                    style="@style/week_picker_text"/>
                <CheckBox
                    android:id="@+id/wednesday"
                    android:text="@string/wed"
                    style="@style/week_picker_text"/>
                <CheckBox
                    android:id="@+id/thursday"
                    android:text="@string/thu"
                    style="@style/week_picker_text"/>
                <CheckBox
                    android:id="@+id/friday"
                    android:text="@string/fri"
                    style="@style/week_picker_text"/>
                <CheckBox
                    android:id="@+id/saturday"
                    android:text="@string/sat"
                    style="@style/week_picker_text"/>
            </LinearLayout>
            <TimePicker
                android:id="@+id/reminder_time"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:timePickerMode="spinner"
                android:layout_gravity="center"/>
            <Button
                android:id="@+id/setReminder"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btn_set"
                android:textSize="20sp"
                style="@style/Base.Widget.AppCompat.Button.Colored"/>
    </LinearLayout>
        </LinearLayout>

        <com.google.android.gms.ads.AdView
            android:id="@+id/adView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentStart="true"
            app:adSize="SMART_BANNER"
            app:adUnitId="@string/AdmobBannerAdsID" />
    </RelativeLayout>

</LinearLayout>