<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="match_parent"
     android:layout_width="match_parent"
    android:orientation="vertical">

    <include layout="@layout/action_bar"></include>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TableLayout
            android:id="@+id/tablayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:orientation="vertical">

            <RadioGroup
                android:id="@+id/rg_units"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@drawable/radio_group_back"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/rb_metric_unit"
                    style="@style/diff_btn_style"
                    android:checked="true"
                    android:text="@string/tab_metric_units" />

                <RadioButton
                    android:id="@+id/rb_us_unit"
                    style="@style/diff_btn_style"
                    android:text="@string/tab_us_units" />
            </RadioGroup>

            <TextView
                android:id="@+id/lbl_weight"
                style="@style/label_text_small"
                android:text="@string/txt_weight_in_kg" />

            <EditText
                android:id="@+id/bmi_weight"
                style="@style/bmi_edt" />

            <TextView
                android:id="@+id/lbl_height"
                style="@style/label_text_small"
                android:text="@string/txt_height_in_cm" />

            <TableRow>

                <EditText
                    android:id="@+id/bmi_height_cm"
                    style="@style/bmi_edt"
                    android:layout_weight="1" />

                <EditText
                    android:id="@+id/bmi_height_inch"
                    style="@style/bmi_edt"
                    android:layout_weight="1"
                    android:hint="Inch"
                    android:text="0"
                    android:visibility="gone" />
            </TableRow>

            <TextView
                android:id="@+id/bmi_result"
                style="@style/label_text"
                android:layout_margin="0dp"
                android:paddingTop="20dp" />

            <TextView
                android:id="@+id/result_details"
                style="@style/label_text_small"
                android:layout_margin="0dp"
                android:textAlignment="center" />
        </TableLayout>

        <Button
            android:id="@+id/btn_cal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/adView"
            android:layout_marginBottom="10dp"
            android:background="@color/colorPrimary"
            android:text="@string/btn_calculate"
            android:textColor="@color/textColor" />

        <com.google.android.gms.ads.AdView
            android:id="@+id/adView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:adSize="SMART_BANNER"
            android:layout_alignParentBottom="true"
            app:adUnitId="@string/AdmobBannerAdsID" />
    </RelativeLayout>


</LinearLayout>
