<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.workout.exercise.activity.MainActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#fff">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
            <ImageView
                android:id="@+id/header_img"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxHeight="350dp"
                android:scaleType="centerCrop"
                android:src="@drawable/img"
                android:adjustViewBounds="true" />
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <ImageView
                    android:id="@+id/rate"
                    style="@style/main_share_options"
                    android:src="@drawable/rate"
                    android:onClick="rateOnclick"/>
                <ImageView
                    android:id="@+id/share"
                    style="@style/main_share_options"
                    android:src="@drawable/share"
                    android:onClick="shareOnClick"/>
                <ImageView
                    android:id="@+id/more"
                    style="@style/main_share_options"
                    android:src="@drawable/more"
                    android:onClick="moreOnClick"/>
            </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@id/header_img"
            android:layout_marginBottom="0dp"
            android:background="@drawable/title_background"
            android:fontFamily="@font/oswaldregular"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/app_name"
            android:textAllCaps="true"
            android:textColor="#fff"
            android:textSize="20sp" />
    </RelativeLayout>

    <ImageView
        android:src="@drawable/start"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_margin="10dp"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:onClick="startExercise"/>

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1">
        <TableRow
            android:layout_gravity="bottom">
            <ImageView
                style="@style/main_second_options"
                android:src="@drawable/exercises"
                android:tag="list"
                android:onClick="exerciseOnClick"/>
            <ImageView
                style="@style/main_second_options"
                android:onClick="calculatorOnClick"
                android:src="@drawable/bmi"
                android:tag="bmi" />
            <ImageView
                style="@style/main_second_options"
                android:src="@drawable/settings"
                android:tag="settings"
                android:onClick="settingOnClick"/>
            <ImageView
                style="@style/main_second_options"
                android:src="@drawable/history"
                android:onClick="myExercise"/>
        </TableRow>
        <TableRow>
            <TextView
                style="@style/main_second_options_txt"
                android:text="@string/title_exercise"
                android:tag="list"
                android:onClick="exerciseOnClick"/>
            <TextView
                style="@style/main_second_options_txt"
                android:text="@string/title_calculator"
                android:tag="bmi"
                android:onClick="calculatorOnClick"/>
            <TextView
                style="@style/main_second_options_txt"
                android:text="@string/title_settings"
                android:tag="settings"
                android:onClick="settingOnClick"/>
            <TextView
                style="@style/main_second_options_txt"
                android:text="@string/title_history"
                android:onClick="myExercise"/>
        </TableRow>
    </TableLayout>
    <com.google.android.gms.ads.AdView
        android:id="@+id/adView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:adUnitId="@string/AdmobBannerAdsID"
        app:adSize="SMART_BANNER"/>
</LinearLayout>
