<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include layout="@layout/action_bar"/>

    <com.prolificinteractive.materialcalendarview.MaterialCalendarView
        android:id="@+id/calendar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/action_bar"
        android:layout_above="@id/calendar_indicators"
        app:mcv_selectionColor="@color/colorPrimaryDark"
        android:clickable="false" />
    <TableLayout
        android:id="@+id/calendar_indicators"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/adView"
        android:layout_margin="10dp">

        <TableRow
            android:gravity="center_vertical">
            <ImageView
                android:src="@drawable/calendar_indicators"
                android:layout_margin="10dp"/>
            <TextView
                android:text="@string/txt_today"
                style="@style/label_text"
                android:layout_margin="0dp"
                android:textAlignment="inherit" />
        </TableRow>
        <TableRow
            android:gravity="center_vertical">
            <ImageView
                android:layout_width="10dp"
                android:layout_height="10dp"
                android:src="@drawable/calendar_indicators"
                android:layout_margin="10dp"
                android:tint="@android:color/holo_red_dark" />
            <TextView
                android:text="@string/txt_exercise_complete"
                style="@style/label_text"
                android:layout_margin="0dp" />
        </TableRow>
    </TableLayout>
    <com.google.android.gms.ads.AdView
        android:id="@+id/adView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        app:adUnitId="@string/AdmobBannerAdsID"
        app:adSize="SMART_BANNER"/>
</RelativeLayout>
